<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>

    <string name="run_workout">Place Holder for Run Workout Logo</string>
    <string name="run_distance_hint_mi">Enter Distance in mi</string>
    <string name="distance_label">Distance</string>
    <string name="run_duration_hint_time">Enter Time</string>
    <string name="duration_label">Time</string>

    <string name="submit_button">Save Workout</string>



</resources>
